--- a/assets/scss/layout/_mobile-app.scss
+++ b/assets/scss/layout/_mobile-app.scss
@@ -21,3 +21,23 @@
     }
 
 }
+@media (max-width: 992px) and (min-width: 500px) {
+    #mobile-app{
+        .mobile-image{
+            display: none;
+        }
+        .mobile-title{
+            width: 100%;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .title{
+                h3{
+                    text-align: center;
+                }
+            }
+        }
+    }
+}
