--- a/assets/scss/layout/_starex-about.scss
+++ b/assets/scss/layout/_starex-about.scss
@@ -35,6 +35,52 @@
      }
      .about-image{
       background-color: #EDEEEF;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      width: 100%;
      }
 
+}
+
+@media (max-width: 992px) and (min-width: 500px){
+    #starex-about{
+      svg {
+         transform: scale(0.9);
+     }
+      
+      h6,h3{
+         color: white;
+         font-size: 24px;
+      }
+      .title{
+         h3{
+            font-size: 24px;
+         }
+      }
+      p{
+         color: white;
+         font-size: 16px;
+      }
+      .title>p{
+         color: white;
+         font-size: 16px;
+      }
+      .about-image{
+         grid-template-columns: repeat(1,1fr);
+      }
+      .about{
+         position: absolute;
+         overflow: hidden;
+         padding-top: 15rem;
+      
+      
+      }
+      .image{
+         overflow: hidden;
+         img{
+            width: 100%;
+           
+         }
+      }
+    }
 }
