--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -72,6 +72,9 @@ footer {
             display: inline-block;
             font-size: 16px;
         }
+        span{
+            font-size: 15px;
+        }
         .copyright{
             justify-content: center;
             font-size: 16px;
