--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -27,6 +27,7 @@ header {
       
 
     }
+
     .btn{
         @include btn-universal
     }
@@ -101,8 +102,11 @@ header {
                 font-weight: 600;
             }
             .header-list-wrapper{
-               align-content: center;
-               justify-content: center;
+             display: flex;
+             justify-content: center;
+             align-items: center;
+
+            }
             }
             .header-list-wrapper>ul{
                 display: flex;
@@ -119,27 +123,33 @@ header {
             
             }
         }
+    
+        button{
+            margin-left: 1rem;
+            padding: .8rem;
+            color: $thirdColor;
+            border-radius: 2px;
+            border: 1px solid white;
+            font-size: 1.2rem;
+            background-color: transparent;
+            white-space: nowrap;
+            
+            
+     
+           }
+        a{
+            text-decoration: none;
+        }
+        .btn-toggle{
+            display: none;
+        }
+        .buttons-side{
+            display: none;
+        }
+        font-size: 12px;
     }
-                   button{
-                margin-left: 1rem;
-                padding: .8rem;
-                color: $thirdColor;
-                border-radius: 2px;
-                border: 1px solid white;
-                font-size: 1rem;
-                background-color: transparent;
-         
-               }
-            a{
-                text-decoration: none;
-            }
-            .btn-toggle{
-                display: none;
-            }
-            .buttons-side{
-                display: none;
-            }
-}
+             
+
 .responsive-header-search{
     display: none;
 }
@@ -222,6 +232,11 @@ header {
                 }
             
         .backround{
+            .header-backround{
+                .container{
+                    background-color: white;
+                }
+            }
             width: 100%;
         
               
