--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -69,6 +69,9 @@ footer .footer-responsive-tel {
     display: inline-block;
     font-size: 16px;
   }
+  footer span {
+    font-size: 15px;
+  }
   footer .copyright {
     justify-content: center;
     font-size: 16px;
@@ -76,6 +79,7 @@ footer .footer-responsive-tel {
 }
 header {
   color: #fff;
+  font-size: 12px;
 }
 header .backround {
   width: 100%;
@@ -104,7 +108,7 @@ header .btn {
   color: #fff;
   border-radius: 2px;
   border: none;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 header .btn .btn-universal:hover {
   background-color: rgba(101, 101, 180, 0.9);
@@ -133,7 +137,7 @@ header .slider-info .btn {
   color: #fff;
   border-radius: 2px;
   border: none;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 header .slider-info .btn .btn-universal:hover {
   background-color: rgba(101, 101, 180, 0.9);
@@ -183,7 +187,7 @@ header .header-list .header-list-down .header-declare .btn {
   color: #fff;
   border-radius: 2px;
   border: none;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 header .header-list .header-list-down .header-declare .btn .btn-universal:hover {
   background-color: rgba(101, 101, 180, 0.9);
@@ -193,14 +197,15 @@ header .header-list .header-list-down .logo {
   font-weight: 600;
 }
 header .header-list .header-list-down .header-list-wrapper {
-  align-content: center;
+  display: flex;
   justify-content: center;
+  align-items: center;
 }
-header .header-list .header-list-down .header-list-wrapper > ul {
+header .header-list .header-list-wrapper > ul {
   display: flex;
   list-style-type: none;
 }
-header .header-list .header-list-down .header-list-wrapper > ul > li {
+header .header-list .header-list-wrapper > ul > li {
   font-size: 1.6rem;
   font-weight: 600;
   margin-left: 1.5rem;
@@ -213,8 +218,9 @@ header button {
   color: #fff;
   border-radius: 2px;
   border: 1px solid white;
-  font-size: 1rem;
+  font-size: 1.2rem;
   background-color: transparent;
+  white-space: nowrap;
 }
 header a {
   text-decoration: none;
@@ -297,6 +303,9 @@ header .buttons-side {
   header .backround {
     width: 100%;
   }
+  header .backround .header-backround .container {
+    background-color: white;
+  }
   header .backround .slider-info {
     text-align: center;
   }
@@ -335,7 +344,7 @@ header .buttons-side {
     color: #fff;
     border-radius: 2px;
     border: none;
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
   .responsive-header-search .btn .btn-universal:hover {
     background-color: rgba(101, 101, 180, 0.9);
@@ -392,15 +401,28 @@ header .buttons-side {
   color: #fff;
   border-radius: 2px;
   border: none;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 #step-by-step .btn .btn-universal:hover {
   background-color: rgba(101, 101, 180, 0.9);
 }
 
 @media (max-width: 992px) and (min-width: 767px) {
-  #step-by-step {
-    width: 41.6666666667%;
+  #step-by-step .steps {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+  }
+  #step-by-step .steps .step-login-order-payment-delivry {
+    width: 100%;
+  }
+}
+@media (max-width: 767px) and (min-width: 500px) {
+  #setp-by-step .steps {
+    display: grid;
+    grid-template-columns: repeat(1, 100%);
+  }
+  #setp-by-step .steps .step-login-order-payment-delivry {
+    width: 100%;
   }
 }
 #pickUpPoints {
@@ -533,7 +555,7 @@ header .buttons-side {
 }
 #starex-about .about {
   align-content: center;
-  padding-left: 18rem;
+  padding-left: 12rem;
 }
 #starex-about h6 {
   font-size: 1.25rem;
@@ -541,7 +563,7 @@ header .buttons-side {
   color: rgb(89, 89, 89);
 }
 #starex-about p {
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   padding: 0.4rem 0;
   color: rgb(89, 89, 89);
 }
@@ -635,7 +657,7 @@ header .buttons-side {
   color: #fff;
   border-radius: 2px;
   border: none;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 #calculator .btn .btn-universal:hover {
   background-color: rgba(101, 101, 180, 0.9);
@@ -1026,12 +1048,12 @@ header .buttons-side {
 }
 
 html {
-  font-size: 10px;
+  font-size: 12px;
   font-family: "sans-serif", "Arial";
 }
 
 .container {
-  padding: 0;
+  padding: 0 15rem;
 }
 
 .row {
@@ -1129,6 +1151,6 @@ footer {
 
 @media (max-width: 992px) {
   .container {
-    padding: 0;
+    padding: 0 5rem;
   }
 }/*# sourceMappingURL=main.css.map */
