--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -407,21 +407,12 @@ header .buttons-side {
   background-color: rgba(101, 101, 180, 0.9);
 }
 
-@media (max-width: 992px) and (min-width: 767px) {
+@media (max-width: 992px) and (min-width: 500px) {
   #step-by-step .steps {
     display: grid;
     grid-template-columns: repeat(2, 50%);
   }
   #step-by-step .steps .step-login-order-payment-delivry {
-    width: 100%;
-  }
-}
-@media (max-width: 767px) and (min-width: 500px) {
-  #setp-by-step .steps {
-    display: grid;
-    grid-template-columns: repeat(1, 100%);
-  }
-  #setp-by-step .steps .step-login-order-payment-delivry {
     width: 100%;
   }
 }
@@ -976,6 +967,9 @@ header .buttons-side {
 }
 
 @media (max-width: 992px) and (min-width: 500px) {
+  #delivery-about .container {
+    padding: 0 1.7rem;
+  }
   #delivery-about .weight {
     background-color: white;
     font-size: 1.2rem;
@@ -989,6 +983,11 @@ header .buttons-side {
   }
   #delivery-about .weight .even {
     background-color: rgb(243, 241, 241);
+  }
+}
+@media (max-width: 760px) and (min-width: 500px) {
+  #delivery-about p {
+    font-size: 8.9px;
   }
 }
 #contact-title h2 {
@@ -1149,8 +1148,19 @@ footer {
   width: 100%;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 1170px) {
+  html {
+    font-size: 10px;
+  }
   .container {
     padding: 0 5rem;
+  }
+}
+@media (max-width: 1476px) {
+  .container {
+    padding: 0 8rem;
+  }
+  header .header-list .header-list-wrapper > ul > li {
+    font-size: 1.2rem;
   }
 }/*# sourceMappingURL=main.css.map */
