--- a/assets/scss/partial/rates/_delivery-about.scss
+++ b/assets/scss/partial/rates/_delivery-about.scss
@@ -20,7 +20,12 @@
 }
 
 @media (max-width: 992px) and (min-width: 500px){
-    #delivery-about{
+
+    #delivery-about {
+
+        .container{
+            padding: 0 1.7rem;
+        }
         .weight{
             background-color: white;
             font-size: 1.2rem;
@@ -36,5 +41,14 @@
                 background-color: rgb(243, 241, 241);
             }
         }
+    }
+}
+
+@media (max-width: 760px) and (min-width: 500px){
+    #delivery-about{
+      p{
+        font-size: 8.9px;
+      }
+
     }
 }
